--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -12,7 +12,7 @@
     7503 Christopher Place<br>
     Charlotte, NC 28226</p>
     <p><a href="mailto:cabambin@syr.edu">Cole Bambini Email</a></p>
-    <p><a href="https://www.linkedin.com/in/cole-bambini-a13191200/"><img src="../images/linkedin.svg" alt="linkedin logo">My LinkedIn Profile</a></p>
+    <p><a href="https://www.linkedin.com/in/cole-bambini-a13191200/"><img src="../images/linkedin.png" alt="linkedin logo">My LinkedIn Profile</a></p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3264.0081903722767!2d-80.78697018554007!3d35.10650636888498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8854273e368e159b%3A0x3cbd934b3bc8a3a7!2s7503%20Christopher%20Pl%2C%20Charlotte%2C%20NC%2028226!5e0!3m2!1sen!2sus!4v1644447204468!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </body>
 </html>
