update lab 04 contact

--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -31,8 +31,8 @@
         <p>Best way to reach out to you?<br>(Select all that apply)</p>
             <label for="phone">Phone</label>
             <input type="checkbox" id="phone" name="phone">
-            <label for="email">Email</label>
-            <input type="checkbox" id="email" name="email"><br>
+            <label for="emails">Email</label>
+            <input type="checkbox" id="emails" name="emails"><br>
         
         <p>Do you want to me connect with you on LinkedIn?</p>
             <label for="yes">Yes!</label>
