--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -23,8 +23,8 @@
         <input type="text" name="lastname" id="lastname"><br>
         <label for="phonenumber">Phone Number</label>
         <input type="text" name="phonenumber" id="phonenumber"><br>
-        <label for="email">Email address</label>
-        <input type="text" name="email" id="email"><br>
+        <label for="mail">Email address</label>
+        <input type="text" name="mail" id="mail"><br>
         <label for="description">Brief Description of Inquiry</label>
         <textarea name="description" id="description"></textarea><br>
 
