--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -16,14 +16,22 @@
 
     <h1>Contact</h1>
 
-    <p>Cole Bambini<br>
-    7503 Christopher Place<br>
-    Charlotte, NC 28226</p>
-    <p><a href="mailto:cabambin@syr.edu">Cole Bambini Email</a></p>
-    <p><a href="https://www.linkedin.com/in/cole-bambini-a13191200/"><img src="../images/logo-sized.png" alt="linkedin logo">My LinkedIn Profile</a></p>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3264.0081903722767!2d-80.78697018554007!3d35.10650636888498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8854273e368e159b%3A0x3cbd934b3bc8a3a7!2s7503%20Christopher%20Pl%2C%20Charlotte%2C%20NC%2028226!5e0!3m2!1sen!2sus!4v1644447204468!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe><br>
-    <hr>
-    <h2>Inquiries?</h2>
+<div class="first">
+    <div class="address">
+        <p>Cole Bambini<br>
+        7503 Christopher Place<br>
+        Charlotte, NC 28226</p>
+    </div>
+    <div class="email">
+        <p><a href="mailto:cabambin@syr.edu">Cole Bambini Email</a></p>
+        <p><a href="https://www.linkedin.com/in/cole-bambini-a13191200/"><img src="../images/logo-sized.png" alt="linkedin logo">My LinkedIn Profile</a></p>
+        <br>
+    </div>
+</div>
+
+<div class="second">
+    <div class="submit">
+        <h2>Inquiries?</h2>
     <form action="https://formspree.io/f/meqnggyk" method="post">
         <label for="firstname">First name</label>
         <input type="text" name="firstname" id="firstname"><br>
@@ -50,5 +58,10 @@
             <input type="submit" value="Submit!"> 
 
     </form>
+    </div class="map">
+    <div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3264.0081903722767!2d-80.78697018554007!3d35.10650636888498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8854273e368e159b%3A0x3cbd934b3bc8a3a7!2s7503%20Christopher%20Pl%2C%20Charlotte%2C%20NC%2028226!5e0!3m2!1sen!2sus!4v1644447204468!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+</div>
+    <hr>
+    
 </body>
 </html>
