--- a/lab08/index.html
+++ b/lab08/index.html
@@ -13,9 +13,10 @@
          <a href="contact.html">Contact</a>
         </p>
      </nav>
-     <img src="../images/banner.jpeg" alt="banner photo">
+     <header><img src="../images/banner.jpeg" alt="banner photo"></header>
     <h1>Cole Bambini's Biography</h1>
 
+     <main>
     <p>I’m a dual-major in magazine, news & digital journalism and Spanish with minors in information management & technology and sport management and I highly interested in sports journalism in print and digital platforms.
     </p>
      <p>At Syracuse I am a, <strong>College of Arts & Sciences Leadership Scholar, Invest in Success Scholar, 2021 Summer Global Learning Scholar</strong> and I have been placed on Dean’s List for all semesters.
@@ -33,9 +34,11 @@
     <h2>Personal Info</h2>
 
     <p>Outside of work, I love reading sports articles and watching sports documentaries. In my spare time, I write for The Daily Orange, SU’s student-run paper where I currently cover women’s lacrosse and covered rowing and volleyball in the past. I am big sports fan with my favorite professional teams being the Carolina Panthers and Charlotte Hornets since I am from Charlotte, North Carolina. Raised there pretty much my entire life, I also have two older siblings work in finance or engineering. It’s funny because I am not a fan of reading fictitious novels and I always dreaded English classes in high school simply because they don’t teach journalistic principles. Lastly, for entertainment, my favorite television show is “The Blacklist”. </p>
-
+    </main>
+<footer>
     <hr>
-    &copy; 2020
-    
+    &copy; 2020 <div class="quote">"Journalism can never be silent: that is its greatest virtue and its greatest fault" - Henry Anatole Grunwald</div>
+</footer>
+
  </body>  
 </html>
