--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -23,7 +23,7 @@
 
         <div class="parent">
             <div class="skillset">
-                <p><div><img class="icon" src="social.png" alt="Social Media Icon"><br>
+                <div><img class="icon" src="social.png" alt="Social Media Icon"><br>
                    Social Media</div>
                 <div><img class="icon" src="spain.png" alt="spain flag"><br>
                     Spanish</div>
@@ -32,7 +32,7 @@
                 <div><img class="icon" src="html.png" alt="html logo"><br>
                     HTML</div>
                 <div><img class="icon" src="google.png" alt="google logo"><br>
-                    Google Drive</div></p>
+                    Google Drive</div>
             </div>
             <div class="other">
               <aside>
