--- a/project/home.html
+++ b/project/home.html
@@ -14,7 +14,7 @@
         <p>
         <a href="home.html">Home</a> | 
         <a href="dailyorange.html">Daily Orange</a> |
-        <a href="othermedia.html">Multimedia & Other Work</a>
+        <a href="othermedia2.html">Multimedia & Other Work</a>
        </p>
     </nav>
     <header><img src="../images/banner.jpeg" alt="banner photo"></header>
