--- a/lab11/index.html
+++ b/lab11/index.html
@@ -10,9 +10,9 @@
      <nav>
          <p>
          <a href="#content" id="skip">Skip to Content</a>
-         <a href="index.html" tabindex="1">Home</a><span> | </span> 
-         <a href="skills.html" tabindex="2">Skills</a><span> | </span>
-         <a href="contact.html" tabindex="3">Contact</a>
+         <a href="index.html">Home</a><span> | </span> 
+         <a href="skills.html">Skills</a><span> | </span>
+         <a href="contact.html">Contact</a>
         </p>
      </nav>
      <header><img class="bigphoto" src="../images/banner.jpeg" alt="Cole Bambini with skyline background"></header>
