--- a/lab11/skills.html
+++ b/lab11/skills.html
@@ -16,6 +16,8 @@
        </p>
     </nav>
 
+<main>
+
     <div class="heading"><h1>Technical Skills</h1></div>
 <div class="submain">
     <div class="subtext"><p>My skills represent a combination of journalism, graphic design, linguistics and information technology. I have a vast skillset that I have developed while studying at Syracuse University taking courses in several different areas. From Adobe to Google, it's a wide variety.</p></div>
@@ -49,6 +51,8 @@
                 </aside>  
             </div>
         </div>
+
+    </main>
       
 
  </body>
