--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -15,6 +15,7 @@
         <a href="contact.html">Contact</a>
        </p>
     </nav>
+<main>
 
     <h1>Contact</h1>
 
@@ -64,6 +65,8 @@
     <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3264.0081903722767!2d-80.78697018554007!3d35.10650636888498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8854273e368e159b%3A0x3cbd934b3bc8a3a7!2s7503%20Christopher%20Pl%2C%20Charlotte%2C%20NC%2028226!5e0!3m2!1sen!2sus!4v1644447204468!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
 </div>
     <hr>
+
+</main>
     
 </body>
 </html>
