--- a/lab11/index.html
+++ b/lab11/index.html
@@ -18,7 +18,7 @@
      <header><img class="bigphoto" src="../images/banner.jpeg" alt="Cole Bambini with skyline background"></header>
     <h1>Cole Bambini's Biography</h1>
 
-     <main>
+     <main id="content">
     <p>I’m a dual-major in magazine, news & digital journalism and Spanish with minors in information management & technology and sport management and I highly interested in sports journalism in print and digital platforms.
     </p>
      <p>At Syracuse I am a, <strong>College of Arts & Sciences Leadership Scholar, Invest in Success Scholar, 2021 Summer Global Learning Scholar</strong> and I have been placed on Dean’s List for all semesters.
