--- a/lab11/skills.html
+++ b/lab11/skills.html
@@ -16,7 +16,7 @@
        </p>
     </nav>
 
-<main>
+<main id="content">
 
     <div class="heading"><h1>Technical Skills</h1></div>
 <div class="submain">
