--- a/lecturenotes/week8flexbox.html
+++ b/lecturenotes/week8flexbox.html
@@ -29,7 +29,6 @@
         </style>
     </head>
     <body>
-        <footer>
 
         <div class="row1">
             <div class="sealcol">
@@ -88,6 +87,7 @@
                     </p>
             </div>
         </div>
+        <footer></footer>
         
         <div class="row2"> <!--this is our row div container-->
             <div> <!--first column div container-->
@@ -106,7 +106,6 @@
         <a href="https://www.syracuse.edu/about/site/privacy-policy/">Privacy</a>
             </div>
         </div>
-
-    </footer>   
+    </footer>
     </body>
 </html>
