--- a/project6/home.html
+++ b/project6/home.html
@@ -33,9 +33,9 @@
     <h3 class="highlights">Highlights from Spain!</h3>
 
     <div class="spain">
-        <div><p>Madrid</p><br><img class="madrid" src="../images/madridphoto.jpeg" alt="Madrid, Spain"></div>
-        <div><p>Barcelona</p><br><img class="barcelona" src="../images/barcelona.jpeg" alt="Barcelona, Spain"></div>
-        <div><p>Valencia</p><br><img class="valencia" src="../images/valencia.jpeg" alt="Valencia, Spain"></div>
+        <div><h3>Madrid</h3><br><img class="madrid" src="../images/madridphoto.jpeg" alt="Madrid, Spain"></div>
+        <div><h3>Barcelona</h3><br><img class="barcelona" src="../images/barcelona.jpeg" alt="Barcelona, Spain"></div>
+        <div><h3>Valencia</h3><br><img class="valencia" src="../images/valencia.jpeg" alt="Valencia, Spain"></div>
     </div>
 
     <hr>
