--- a/project6/home.html
+++ b/project6/home.html
@@ -47,14 +47,13 @@
         <div class="contact">
             <h3 class="education">Education</h3>
             <p>Syracuse University (8/2020 - 5/2024)</p>
-            <p>Dual-Enrollment Program: College of Arts & Sciences and the S.I. Newhouse School of Public Communications
+            <p>Dual-Enrollment Program: College of Arts & Sciences and the S.I. Newhouse School of Public Communications</p>
                 <ul>
                     <li>BS - Magazine, News & Digital Journalism: Concentration - Newspaper</li>
                     <li>BA - Spanish Language, Literature & Culture</li>
                     <li>Minor: Information Management & Technology - iSchool</li>
                     <li>Minor: Sport Management - Falk College</li>
                 </ul>
-            </p>
             <hr>
             <h2>Contact</h2>
 
@@ -72,7 +71,8 @@
             <input type="text" name="mail" id="mail"><br>
             <label for="description">Brief Description of Inquiry</label>
             <textarea name="description" id="description"></textarea><br>
-            <a href="https://twitter.com/colebambini"">Twitter</a>
+            </form>
+            <a href="https://twitter.com/colebambini">Twitter</a>
             <a href="https://www.linkedin.com/in/cole-bambini-a13191200/">LinkedIn</a>
 
         </div>
@@ -194,14 +194,13 @@
         <div class="contact">
             <h3 class="education">Education</h3>
             <p>Syracuse University (8/2020 - 5/2024)</p>
-            <p>Dual-Enrollment Program: College of Arts & Sciences and the S.I. Newhouse School of Public Communications
+            <p>Dual-Enrollment Program: College of Arts & Sciences and the S.I. Newhouse School of Public Communications</p>
                 <ul>
                     <li>BS - Magazine, News & Digital Journalism: Concentration - Newspaper</li>
                     <li>BA - Spanish Language, Literature & Culture</li>
                     <li>Minor: Information Management & Technology - iSchool</li>
                     <li>Minor: Sport Management - Falk College</li>
                 </ul>
-            </p>
             <hr>
             <h2>Contact</h2>
 
@@ -219,7 +218,8 @@
             <input type="text" name="mail" id="mail"><br>
             <label for="description">Brief Description of Inquiry</label>
             <textarea name="description" id="description"></textarea><br>
-            <a href="https://twitter.com/colebambini"">Twitter</a>
+            </form>
+            <a href="https://twitter.com/colebambini">Twitter</a>
             <a href="https://www.linkedin.com/in/cole-bambini-a13191200/">LinkedIn</a>
 
         </div>
