updated lab project

--- a/project6/home.html
+++ b/project6/home.html
@@ -208,16 +208,16 @@
             <p>Mobile: 704-591-9634</p>
             <h3>Let's connect</h3>
             <form action="https://formspree.io/f/meqnggyk" method="post">
-            <label for="firstname">First name</label>
-            <input type="text" name="firstname" id="firstname"><br>
-            <label for="lastname">Last name</label>
-            <input type="text" name="lastname" id="lastname"><br>
-            <label for="phonenumber">Phone Number</label>
-            <input type="text" name="phonenumber" id="phonenumber"><br>
-            <label for="mail">Email address</label>
-            <input type="text" name="mail" id="mail"><br>
-            <label for="description">Brief Description of Inquiry</label>
-            <textarea name="description" id="description"></textarea><br>
+            <label for="firstname2">First name</label>
+            <input type="text" name="firstname" id="firstname2"><br>
+            <label for="lastname2">Last name</label>
+            <input type="text" name="lastname" id="lastname2"><br>
+            <label for="phonenumber2">Phone Number</label>
+            <input type="text" name="phonenumber" id="phonenumber2"><br>
+            <label for="mail2">Email address</label>
+            <input type="text" name="mail" id="mail2"><br>
+            <label for="description2">Brief Description of Inquiry</label>
+            <textarea name="description" id="description2"></textarea><br>
             </form>
             <a href="https://twitter.com/colebambini">Twitter</a>
             <a href="https://www.linkedin.com/in/cole-bambini-a13191200/">LinkedIn</a>
