final update hopefully

--- a/finalproject/dailyorange.html
+++ b/finalproject/dailyorange.html
@@ -30,7 +30,9 @@
             </div>
             <div class="copy">
                 <p><i>"Emily Hawryschuk dodged into a double team in the team’s routine sevens drill during practice. She planned to go toward goal, but when stepping toward midfield, her right knee caved and buckled.</i></p>
-                <p><i>Days later, team doctors confirmed Hawryschuk’s torn ACL, ending what was supposed to be her “Heisman year.” SU lost an All-American, its three-time scoring leader and Inside Lacrosse’s second-best collegiate lacrosse player less than a month into the 2021 season..."</i></p>
+                <p><i>Days later, team doctors confirmed Hawryschuk’s torn ACL, ending what was supposed to be her “Heisman year.” SU lost an All-American, its three-time scoring leader and Inside Lacrosse’s second-best collegiate lacrosse player less than a month into the 2021 season</i></p>
+                <p><i>Hawryschuk’s injury spoiled her planned fifth year after COVID-19 halted the season prior. She played one game, scoring four goals in a 18-6 win over Loyola Maryland. Without Hawryschuk in the lineup, the Orange turned to Emma Ward and Meaghan Tyrrell, but Syracuse eventually fell to Boston College in the national championship game. During her recovery period, Hawryschuk focused on research, conversation and coming back from the injury ahead of schedule.</i></p>
+                <p><i>Now, Hawryschuk enters this season with a chance to break SU’s all-time goals record and bring the Orange their first national championship...</i></p>
             </div>
         </div>
         <hr>
@@ -45,7 +47,9 @@
             </div>
             <div class="copy">
                 <p><i>"In February 2017, Team Japan entered its final Olympic ice hockey qualification tournament match against Germany. With France and Austria mathematically eliminated, a win would secure a berth to the 2018 PyeongChang Olympic Games and a second consecutive Olympic appearance for Japan.</i></p>
-                <p><i>Captained by Syracuse ice hockey alumna Akane Hosoyamada, Japan notched two goals in the first 11 minutes of the second period, with Hosoyamada assisting the second on the power play..."</i></p>
+                <p><i>Captained by Syracuse ice hockey alumna Akane Hosoyamada, Japan notched two goals in the first 11 minutes of the second period, with Hosoyamada assisting the second on the power play.</i></p>
+                <p><i>“I think that was just a huge moment for me,” Hosoyamada said. “Just playing in my home country and just seeing how hockey is growing in Japan.”</i></p>
+                <p><i>Hosoyamada played at Syracuse from 2010-15, recording 151 appearances — the second-most behind Victoria Klimek — and she notched the program’s fifth-most points by a defenseman with 61 (10 goals and 51 assists). She was named to College Hockey America’s All-Rookie Team as a freshman, and in her fifth year, Hosoyamada captained the Orange and earned a spot on the CHA All-Second Team..."</i></p>
             </div>
         </div>
         <hr>
@@ -60,7 +64,8 @@
             </div>
             <div class="copy">
                 <p><i>"West Genesee junior guard Katie Kolinski beat Cicero-North Syracuse High School sophomore forward Breanna Stewart to the baseline by three steps, eyes set on an easy layup. Thinking she had an open layup, Kolinski met Stewart in the lane.</i></p>
-                <p><i>Stewart towered over Kolinski and swatted her shot to the other side of C-NS’s court, just one of her 11 blocks on the night. The Northstars cruised to victory over the Wildcats, winning 74-32 with Stewart recording 21 points and 11 rebounds..."</i></p>
+                <p><i>Stewart towered over Kolinski and swatted her shot to the other side of C-NS’s court, just one of her 11 blocks on the night. The Northstars cruised to victory over the Wildcats, winning 74-32 with Stewart recording 21 points and 11 rebounds.</i></p>
+                <p><i>By the end of her senior season, Stewart was the Naismith Prep Player of the Year, Gatorade National Girls Basketball Player of the Year and a McDonald’s All-American. From 2008 to 2012, she finished as the Northstars’ all-time leading scorer with 2,367 points, 1,389 rebounds and 634 blocks..."</i></p>
             </div>
         </div>
         <hr>
@@ -71,7 +76,8 @@
             </div>
             <div class="copy">
                 <p><i>"A strong headwind dominated the red clay shores of Lake Lanier Olympic Park in Gainesville, Georgia on May 26, 2001. An excited Alicea Strodel and a nervous Helen Tanger — sitting in the sixth and third seats, respectively — were among the rowers in Syracuse’s varsity 8 huddle before the grand final of the NCAA Championships. They were preparing for the 2000-meter championship race without head coach Kris Sanford.</i></p>
-                <p><i>The night prior, Sanford was hospitalized with a medical emergency. Instead, Bill Sanford, a longtime SU men’s rowing head coach and Sanford’s father, took charge of the traditional pre-race huddle and pep talk before the Orange launched. It was the first time an SU varsity 8 qualified for the grand final, and the Orange were looking for their first NCAA title in program history. The 2001 championships marked the school’s third varsity 8 at-large bid and second consecutive NCAA appearance, with the varsity 8 placing ninth..."</i></p>
+                <p><i>The night prior, Sanford was hospitalized with a medical emergency. Instead, Bill Sanford, a longtime SU men’s rowing head coach and Sanford’s father, took charge of the traditional pre-race huddle and pep talk before the Orange launched. It was the first time an SU varsity 8 qualified for the grand final, and the Orange were looking for their first NCAA title in program history. The 2001 championships marked the school’s third varsity 8 at-large bid and second consecutive NCAA appearance, with the varsity 8 placing ninth.</i></p>
+                <p><i>Without their coach, the Orange launched with five other powerhouses on their side. SU tried to combat the resistant headwind while keeping pace with the rest of the pack, but they couldn’t. Syracuse trailed all five boats in the race for nearly the entire race. They crossed the finish line last (7:19:56), but the sixth-place finish solidified this varsity 8 as the best in SU’s program history..."</i></p>
             </div>
         </div>
         <hr>
@@ -82,7 +88,8 @@
             </div>
             <div class="copy">
                 <p><i>"Abby Casiano didn’t want to go to Syracuse. It was too cold. She wanted to be somewhere with “boiling hot weather.”</i></p>
-                <p><i>Casiano had committed to play Division II volleyball for Saint Leo University, a private liberal arts school located 40 minutes away from her hometown of Riverview, Florida. But coaching changes on the Lions’ staff caused Casiano to reopen her recruitment..."</i></p>
+                <p><i>Casiano had committed to play Division II volleyball for Saint Leo University, a private liberal arts school located 40 minutes away from her hometown of Riverview, Florida. But coaching changes on the Lions’ staff caused Casiano to reopen her recruitment.</i></p>
+                <p><i>After decommitting from the Lions, she ended up at Syracuse, the exact opposite climate she imagined her college experience would be in. But despite the temperature, Casiano has emerged as a star with the Orange, leading the team blocks with 77 and 64 during her freshman and sophomore seasons, respectively. She’s recorded 60 blocks so far this season, the most from a player at SU. In high school, Casiano was a two-time honoree on the Tampa Bay Times’ all-Tampa Bay volleyball team, and she also recorded 949 digs, 239 blocks and a 45.6% hitting percentage with the Tampa Bay HEAT..."</i></p>
             </div>
         </div>
     </div>
