--- a/finalproject/othermedia2.html
+++ b/finalproject/othermedia2.html
@@ -4,42 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
     <nav>
         <p>
-        <a href="home.html">Home</a> | 
-        <a href="dailyorange.html">Daily Orange</a> |
-        <a href="othermedia2.html">Multimedia & Other Work</a>
+            <a href="#content" id="skip" tabindex="1">Skip to Content</a>
+            <a href="home.html" tabindex="2">Home</a> | 
+            <a href="dailyorange.html" tabindex="3">Daily Orange</a> |
+            <a href="othermedia2.html" tabindex="4">Multimedia & Other Work</a>
        </p>
     </nav>
 
 <h1>Multimedia & Other Work</h1>
-<p>On this page you will find samples of my other media work that was mostly done in my classes including which have focused on graphic design, video, HTML, CSS, and research. I have other skill sets, not just in print and online journalism that this page is here to showcase. Below are samples of some of my other work.</p>
+<p class="otherintro">On this page you will find samples of my other media work that was mostly done in my classes including which have focused on graphic design, video, HTML, CSS, and research. I have other skill sets, not just in print and online journalism that this page is here to showcase. Below are samples of some of my other work.</p>
+<hr>
+<h3 class="videoheader">COM 117 – Nonfiction piece</h3>
+<div class="videoembed">
+<iframe src="https://drive.google.com/file/d/1lcpDqDLlzh8Rd2SsileYH6TZkNZ0m6Q7/preview" width="640" height="480" allow="autoplay"></iframe>
+</div>
+<p class="videxp">This final product was my first experience using Adobe Premiere Pro on my own which included shooting B-roll, video interviewing, and hours of editing. Coming from the Southeast, I have many friends who go to schools in that area who are involved in Greek Life. The main objective of the piece was to investigate the differences in COVID-19 restrictions among social Greek Life in Syracuse and schools in the South (Clemson, South Carolina, Virginia Tech). The project earned a score of 100 and was my best scoring assignment in the class.</p>
+<hr>
 
-
-<h3>COM 117 – Nonfiction piece</h3>
-<p>This final product was my first experience using Adobe Premiere Pro on my own which included shooting B-roll, video interviewing, and hours of editing. Coming from the Southeast, I have many friends who go to schools in that area who are involved in Greek Life. The main objective of the piece was to investigate the differences in COVID-19 restrictions among social Greek Life in Syracuse and schools in the South (Clemson, South Carolina, Virginia Tech). The project earned a score of 100 and was my best scoring assignment in the class.</p>
-<h3>VIS 207 – Campaign project</h3>
-<img src="../images/poster.gif">
-<p>This project had two parts: poster and GIF for a campaign. Using Adobe Photoshop primarily, I used several royalty free images to create this poster for a fun running race that celebrate the lives of the 35 Syracuse University passengers on Pan Am Flight 103, who were killed in the bombing of the aircraft. This earned a 92 and represents the various functions within Photoshop.</p>
-<h3>VIS 207 – Editorial Design</h3>
-<img src="../images/magazine1.png">
-<img src="../images/magazine2.png">
-<p>This graphic design project involved Adobe Illustrator, Photoshop, and InDesign to develop a visually appealing magazine. Though we used filler text, the main objective was to create something pleasing to the eye. The infographics, cover, sidebars, etc. were all created using the Adobe programs mentioned to create this product which earned a score of 97.</p>
-<h3>JNL 221 – Final Project</h3>
-<iframe src="https://colebambini.github.io/finalproject/"></iframe>
-<p>In my final assignment, worth 35% of the course grade for JNL 221 – Foundations of Data & Digital Journalism, I combined the principles of data visualization, HTML, CSS, and responsive design with reporting. I analyzed world vaccination rates in late fall 2021 and investigated certain observations. The entire webpage is my creation as well as the written article to complement it. This earned a 92, allowing me to earn an A in the course.</p>
-<h3>JNL 345 – Final Paper</h3>
-<a href="../images/paper.pdf">Download the paper here!</a>
-<p><i>On July 12 , 2013, KTVU - a local FOX affiliate in the Oakland-San Francisco Bay Area
+<div class="allmedia">
+    <div class="campaign">
+        <div class="left">
+            <img class="gif" src="../images/poster2.png">
+        </div>
+        <div class="right">
+            <h3>VIS 207 – Campaign project</h3>
+            <p>This project had two parts: poster and GIF for a campaign. Using Adobe Photoshop primarily, I used several royalty free images to create this poster for a fun running race that celebrate the lives of the 35 Syracuse University passengers on Pan Am Flight 103, who were killed in the bombing of the aircraft. This earned a 92 and represents the various functions within Photoshop.</p>
+            <p>This project had a lot of evolution in it. It took me several attempts to find the right combinations of images and right color scheme to create a meaningful poster. Pan Am Flight 103 is a significant part of Syracuse Univeristy's culture. Ultimately, I settled on a medal with white roses in the center.</p>
+        </div>
+    </div>
+    <hr>
+    <div class="magazine">
+        <div class="left">
+            <img class="mag" src="../images/magazine1copy.png">
+            <img class="mag" src="../images/magazine2copy.png">
+        </div>
+        <div class="right">
+            <h3>VIS 207 – Editorial Design</h3>
+            <p>This graphic design project involved Adobe Illustrator, Photoshop, and InDesign to develop a visually appealing magazine. Though we used filler text, the main objective was to create something pleasing to the eye. The infographics, cover, sidebars, etc. were all created using the Adobe programs mentioned to create this product which earned a score of 97.</p>
+            <p>The theme of mine was a blend between sports and mental health, referencing an article written by Jeff Passan of ESPN about Drew Robinson, a professional baseball player who struggled with his mental health.</p>
+            <p>For the cover page, I tried to create a brighter figure among a darker background as I think it's really telling of people who share their mental health struggles. It originally started as a dark baseball stadium but evolved into much more. Throughout the entire magazine, I kept a consistent color scheme, typeface and infographics to create a visually appealing piece.</p>
+        </div>
+    </div>
+    <hr>
+    <div class="jnlweb">
+        <div class="left">
+            <iframe src="https://colebambini.github.io/finalproject/"></iframe>
+        </div>
+        <div class="right">
+            <h3>JNL 221 – Final Project</h3>
+            <p>In my final assignment, worth 35% of the course grade for JNL 221 – Foundations of Data & Digital Journalism, I combined the principles of data visualization, HTML, CSS, and responsive design with reporting. I analyzed world vaccination rates in late fall 2021 and investigated certain observations. The entire webpage is my creation as well as the written article to complement it. This earned a 92, allowing me to earn an A in the course.</p>
+            <a class="link" href="https://colebambini.github.io/finalproject/">View entire Webpage Here!</a></strong>
+        </div>
+    </div>
+</div>
+<hr>
+<h3 class="paper">JNL 345 – Final Paper</h3>
+<div class="download"><a href="../images/paper.pdf">Download the paper here!</a>
+    <p>This 9-page academic research paper went in-depth on a media ethics issue. I wrote about the on-air blunder of a local FOX affiliate who reported fake pilot names after a plane crash. It incorporated a lot of exterior research as well as two interviews with professors who have knowledge in media ethics. It earned a score of A+ and was used as an example for the course in the following semester.</p>
+</div>
+<div class="essayexcerpt">
+<h3>Excerpt from Essay</h3>
+<p><i>"On July 12 , 2013, KTVU - a local FOX affiliate in the Oakland-San Francisco Bay Area
     - was covering and reporting new information on the fatal crash of Asiana Airlines Flight 214,
     which originated in Seoul, South Korea and crashed on final approach at San Francisco’s airport
     on July 6 , 2013, which killed three passengers and injuring 187 – 49 of them were seriously
     injured. As the news outlet began to gather information, on its KTVU News at Noon show, the show was reporting the death of teen girl on the flight who’s cause of death was unknown as she was hit by a fire truck, but whether she was already dead from the plane crash or killed by the truck was still being investigated at the time. Then, anchor Tori Campbell claimed the network had new information. This information was the names of the four pilots operating the flight. And within the next 30 seconds, KTVU defied journalism ethics and cemented this segment as one of the worst and biggest blunders on television.</i></p>
-    <p><i>In this quick video clip, Campbell confidently says the following: “KTVU has just learned the names of the four pilots who were on board the flight. They are Captain Sum Ting Wong, Wi Tu Low, Ho Lee Fuk, and Bang Ding Ow.” From a very first glance without audio, it’s possible the reader doesn’t notice the intricacies of the names. But upon either hearing the audio, re-reading, or just noticing right of the bat, these names clearly mock the plane crash, incorporate profanity, and essentially subject Asian communities to a mockery. To “translate” (if you want to call it that), the names in order really attempted to say in a form of an Asian language and were likely meant to be interpreted as the following: “Captain Something Wrong, We Too Low, Holy F*ck, and Landing Low.” Whether you consider this racist, an aggression, or a prank, it’s almost impossible to not ask yourself the question, where did these names come from and why did they end up on television screens across the Bay Area?...</i></p>
-<p>This 9-page academic research paper went in-depth on a media ethics issue. I wrote about the on-air blunder of a local FOX affiliate who reported fake pilot names after a plane crash. It incorporated a lot of exterior research as well as two interviews with professors who have knowledge in media ethics. It earned a score of A+ and was used as an example for the course in the following semester.</p>
+    <p><i>In this quick video clip, Campbell confidently says the following: “KTVU has just learned the names of the four pilots who were on board the flight. They are Captain Sum Ting Wong, Wi Tu Low, Ho Lee Fuk, and Bang Ding Ow.” From a very first glance without audio, it’s possible the reader doesn’t notice the intricacies of the names. But upon either hearing the audio, re-reading, or just noticing right of the bat, these names clearly mock the plane crash, incorporate profanity, and essentially subject Asian communities to a mockery. To “translate” (if you want to call it that), the names in order really attempted to say in a form of an Asian language and were likely meant to be interpreted as the following: “Captain Something Wrong, We Too Low, Holy F*ck, and Landing Low.” Whether you consider this racist, an aggression, or a prank, it’s almost impossible to not ask yourself the question, where did these names come from and why did they end up on television screens across the Bay Area?..."</i></p>
+
+</div>
 
 
 
@@ -63,5 +101,8 @@
         <input type="text" name="mail" id="mail"><br>
         <label for="description">Brief Description of Inquiry</label>
         <textarea name="description" id="description"></textarea><br>
+        <a href="https://twitter.com/colebambini">Twitter</a>
+        <a href="https://www.linkedin.com/in/cole-bambini-a13191200/">LinkedIn</a>
+        </form>
 </body>
 </html>
