updated possibly final

--- a/finalproject/othermedia2.html
+++ b/finalproject/othermedia2.html
@@ -30,7 +30,7 @@
 <div class="allmedia">
     <div class="campaign">
         <div class="left">
-            <img class="gif" src="../images/poster2.png">
+            <img class="gif" src="../images/poster2.png" alt="gold medal with white roses">
         </div>
         <div class="right">
             <h3>VIS 207 – Campaign project</h3>
@@ -41,8 +41,8 @@
     <hr>
     <div class="magazine">
         <div class="left">
-            <img class="mag" src="../images/magazine1copy.png">
-            <img class="mag" src="../images/magazine2copy.png">
+            <img class="mag" src="../images/magazine1copy.png" alt="magazine cover and opening spread">
+            <img class="mag" src="../images/magazine2copy.png" alt="fake magazine article with infographics">
         </div>
         <div class="right">
             <h3>VIS 207 – Editorial Design</h3>
@@ -59,7 +59,7 @@
         <div class="right">
             <h3>JNL 221 – Final Project</h3>
             <p>In my final assignment, worth 35% of the course grade for JNL 221 – Foundations of Data & Digital Journalism, I combined the principles of data visualization, HTML, CSS, and responsive design with reporting. I analyzed world vaccination rates in late fall 2021 and investigated certain observations. The entire webpage is my creation as well as the written article to complement it. This earned a 92, allowing me to earn an A in the course.</p>
-            <a class="link" href="https://colebambini.github.io/finalproject/">View entire Webpage Here!</a></strong>
+            <strong><a class="link" href="https://colebambini.github.io/finalproject/">View entire Webpage Here!</a></strong>
         </div>
     </div>
 </div>
