small final update

--- a/finalproject/othermedia2.html
+++ b/finalproject/othermedia2.html
@@ -17,7 +17,7 @@
        </p>
     </nav>
 
-<h1>Multimedia & Other Work</h1>
+<h1 id="content">Multimedia & Other Work</h1>
 <p class="otherintro">On this page you will find samples of my other media work that was mostly done in my classes including which have focused on graphic design, video, HTML, CSS, and research. I have other skill sets, not just in print and online journalism that this page is here to showcase. Below are samples of some of my other work.</p>
 <hr>
 <h3 class="videoheader">COM 117 – Nonfiction piece</h3>
